--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Hello World hey mami be quite son stop worrying so much i got this dammit but i still love you broo.... <3<3<3
+Hello World hey yolii i dont know what i did this time really i dont but all i know is i mustve said 
+something dumb really dumb to upset you and for that i am very sorry hermosaa ik its been shaky for 
+the past two days but this not the outcome i wanted from it all it kills in the inside cuz i never 
+wanted to hurt you and i guess i did perdon and i will get on my knees kiss your hand in downtown to 
+prove i am and i know its not easy it aint either for me but please dont hide shit i feel like shit 
+right now 100% i cant concentrate on my work or do i want to do it! thats all the rest i wanna tell 
+you in person hermosaa bella and im sorry i really i am <3<3<3
