--- a/index.html
+++ b/index.html
@@ -1,6 +1,68 @@
-Hello World hey mrs hardy guess what ive found out
+<!DOCTYPE HTML>
 
+<html>
+	<head>
+		<link rel="stylesheet" type="text/css" href="skin.css" />
+		<title>eminemisbetterthansouljaboyandfufumancantexceptit.com</title>
+	</head>
 
+	<body>
+		<body background="rabbiteminem.jpg"/>
+		<div id="header">
+<br />
+			<a href="why.html"><p class="headerbutton">why</p></a>
+			<a href="pictures.html"><p class="headerbutton">pictures</p></a>
+			<a href="songs.html"><p class="headerbutton">songs</p></a>
+		</div>
+		
+		<div>
+			<h1>EMINEM is just to nice prince don't deny it!!!!!!! SMH</h1>
+			<p>prince I know you are obsessed with soulja boy but common son face reality and
+			the facts. your only hurting yourself by denying the truth. the truth is 
+			<strong>EMINEM IS TOO NICE AND BETERR THAN SOULJA BOY</strong> and <em>  soulja boy 			   		sucks and always will
+			no matter what he does!!!!!!!!!!</em> and sorry my boy but that's the facts I cant
+			do anything about it plus he's a waste of my skills there's so much trash I can say
+			but again waste of my talents so I'm end it here with <strong>EMINEM IS THE BESTTTT
+			OF THE BEST SO ACCEPT IT SON!!!!!!!!!!!</strong></p>
+<br />
+            <input id="Password1" type="password" /><br />
+			<h1>EMINEM</h1>
+			<p>Marshall Bruce Mathers III (born October 17, 1972), better known by his stage name 					Eminem and by 			his alter ego Slim Shady, is an American rapper, record producer, songwriter, 						and actor. In addition to his solo career, Eminem is a member 			of his group D12, as well as 				one half of the hip hop duo Bad 			Meets Evil, alongside Royce da 5'9". Eminem is one of the 					world's best-selling music artists and is the best-selling artist of the 2000s. He has been 			listed and ranked as one of 			the greatest artists of all time by many magazines, including 							Rolling Stone 		magazine which ranked him 82nd on its list of The 100 			Greatest Artists of All 			Time. The same magazine declared him The 			King of Hip Hop. Including his work with D12 and 						Bad Meets Evil, Eminem has achieved ten number-one albums on the Billboard 200. His 					worldwide albums sales stand 			at more than 115 million, singles 120 million, and the 								estimated sale of over 220 million records worldwide. I				n the United 			States, he has sold 				49.1 million albums and 42 million tracks.
 
+			After releasing his independent debut album Infinite in August 1996, Eminem rose to 					mainstream 			popularity with the release of his February 1999 album The Slim Shady LP. The LP 					also earned Eminem his first Grammy Award for Best 			Rap Album. His next two records The 					Marshall Mathers 			LP, and The Eminem Show, also won Best Rap Album Grammy Awards, 			making 				Eminem the first artist to win Best Rap Album for three 			consecutive LPs. This was followed 				by 			another studio release in November 2004 titled Encore. Eminem then went on hiatus after 				touring in 2005. He released his 			fifth album Relapse in May 2009. In June 2010, Eminem 								released his seventh studio album Recovery. Recovery was an 			international success and was 				named the best-selling album of 				2010 worldwide, becoming the rapper's second album, after 					The Eminem Show, to become the internationally best-selling album of its year. Eminem won 				Grammy Awards for 			both Relapse and Recovery, giving 				him a total of 13 Grammys in his 							career. His eighth studio album, The Marshall Mathers 			LP 2 was released in November 2013.
 
-<p>hey daddy este es mi website  yoooo mamiii leave willy alone</p>
+			Eminem has opened other ventures, including his own record label Shady Records with his 				manager Paul 			Rosenberg. He also has his own radio channel, Shade 45 on Sirius XM Radio. In 						2002, Eminem starred in the hip hop drama film 8 			Mile. He won the Academy Award for Best 				Original Song, 			becoming the first rap artist ever to win the award. He has also made 					cameo appearances in The Wash (2001), Funny People (2009), and the television 			series 									Entourage
+<br />
+<br />
+			<span class="rapperid">For more on EMINEM click</span> 
+			<a href="http://en.wikipedia.org/wiki/Eminem">here</a>
+</p>
+<br />
+<br />
+			<h1>Soulja Boy</h1>
+			<p>DeAndre Cortez Way (born July 28, 1990), better known by his stage name Soulja Boy Tell 			'Em, or simply Soulja 						Boy, is an American rapper, record producer, actor, and entrepreneur.
+
+			In September 2007, his single "Crank That (Soulja Boy)" reached number one on the US 					Billboard Hot 100. The single 			was initially self-published on the internet, and it later 			became a 			number-one hit in the United States for 				seven non-consecutive weeks starting in 			September 2007. On 					August 17 Way was listed at number 18 on the 					Forbes list of Hip-Hop 			Cash Kings of 2010 earning $7 million for that 					year.
+
+			Way has currently released three studio albums and one independent album: his debut studio 				album 						Souljaboytellem.com (2007) was certified platinum by the RIAA. However, his next two 					albums, iSouljaBoyTellem 						(2008) and The DeAndre Way (2010) did not match the commercial 			success of 				his debut, the latter only selling 100,000 						copies, despite the success of 			several singles across both albums, 					such as "Kiss Me Thru the Phone" and 			"Turn 			My Swag On" 			(iSouljaBoyTellem) and "Pretty Boy Swag" (The DeAndre Way). 			This was mainly due to 								negotiation problems with Interscope Records which meant a limited amount of records were 				made available to the 						public.
+
+			As of 2011, Way has confirmed he is working on his fourth studio album, which will be 					released in early 2014.
+<br />
+<br />
+			<span class="rapperid">For more info on bummy SOULJA click</span>
+			<a href="http://en.wikipedia.org/wiki/Soulja_Boy">here</a>
+</p>
+<br />
+<br />
+			<h1>SOOOOOOOOOO!!!!!!!</h1>
+			<p>MAC and Seth are rite soulja boy is wack and not better than EMINEM no matter what and the world knows it plus we gaot all the proof in the world. so prince my boy no more embarasment and accept the facts the truth and life.this the reason why we created this website for my boy prince and to tell that eminem is better than soulja boy>   EMINEM alll dayyyyyyyy!!!!!!!!!!</p>
+		</div>
+
+		<div id="footer">
+			<p><span id="creator">The Creator:</span> MAC</p>
+			<p class="footerbutton">About</p>
+			<p class="footerbutton">list of other websites</p>
+			
+		</div>
+	</body>
+</html>
